added point bar charts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercise_app",
+  "name": "cs361_front_ed",
   "proxy": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +14,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
